[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/ship.png-9f7dcac29f4b016ca46abac3a8dd91e5.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/explosion.png-cd01013b443e79bef4529591ef769479.stex"

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.88121
height = 0.660053

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.8025 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.378929, 0.34151, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.552941, 0.160784, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.5, 0.65, 0.9, 1.15, 1.3, 1.55, 1.75, 1.9, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.7411, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = SubResource( 1 )
vframes = 2
hframes = 5
frame = 2

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = SubResource( 2 )
hframes = 5

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.5 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 3 )

[node name="CharacterAnimations" type="AnimationPlayer" parent="."]
anims/default = SubResource( 12 )
anims/die = SubResource( 4 )
anims/hit = SubResource( 10 )
anims/respawn = SubResource( 11 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 0, -35 )
[connection signal="animation_finished" from="CharacterAnimations" to="." method="_on_CharacterAnimations_animation_finished"]
